--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-image: url("../../pig-dice/images/pig.png");
+  background-image: url("../../pig-dice/images/pig1.jpeg");
   background-repeat: no-repeat;
 height: 800px;
 width: 1800px;
