--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,56 @@
-.player-console {
-  display: none;
+h1 {
+  text-align: center;
+  font-size: 40px;
+}
+body {
+  background: url("../img/bg.jpg");
 }
 
-body {
-  background-image: url("../../pig-dice/images/pig2.jpg");
-  background-repeat: no-repeat;
-height: 800px;
-width: 1800px;
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
-color: none;
+.well {
+  background-color: rgba(0, 0, 0, 0);
+  border: 0;
+  margin: auto;
+  text-align: center;
+}
+
+.jumbotron {
+  background-color: rgba(0, 0, 0, 0);
+  color: #fff;
+  font-family: 'Alfa Slab One', cursive;
+}
+
+.btn-lg {
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+.dice {
+  margin: 0 auto;
+  display: block;
+  height: 180px;
+  width: 180px;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 80px;
+}
+
+.panel {
+  width: 450px;
+  margin: 0 auto;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border: 0 solid #86682F;
+}
+
+.panel-heading {
+  background-color: #A5080F;
+}
+
+.activeUser {
+  background-color: green;
+}
+
+.panel-body {
+  font-size: 16pt;
 }
